fix on layout alignment

--- a/src/Components/ItemListContainer/ItemListContainer.css
+++ b/src/Components/ItemListContainer/ItemListContainer.css
@@ -1,6 +1,6 @@
 .ItemListContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: 20px;
     border: 1px solid black;
     border-radius: 10px;
